--- a/THANKS
+++ b/THANKS
@@ -13,10 +13,10 @@ Alexandre Oliva <oliva@dcc.unicamp.br>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
-H.J. Lu <hjl@lucon.org>
+H.J. Lu <hjl@gnu.org>
 Ian Lance Taylor <ian@cygnus.com>
 Joel Cannon <cannon@alpha.centenary.edu>
-Joel N. Weber II <devnull@gnu.ai.mit.edu>
+Joel N. Weber II <devnull@gnu.org>
 Karl Berry <kb@cs.umb.edu>
 Kenneth Albanowski <kjahds@kjahds.com>
 Mark Kettenis <kettenis@phys.uva.nl>
