--- a/demo/README
+++ b/demo/README
@@ -6,4 +6,4 @@ say, a program that actually did something useful, but we can't have
 everything.
 
 Send bug reports and comments about GNU hell to the libtool mailing
-list <bug-libtool@gnu.ai.mit.edu>.
+list <bug-libtool@gnu.org>.
